--- a/Model Validation/Model_Validation.ipynb
+++ b/Model Validation/Model_Validation.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "153c40ec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T06:38:52.497871Z",
-     "start_time": "2023-04-21T06:38:52.480842Z"
+     "end_time": "2023-05-14T16:19:24.286993Z",
+     "start_time": "2023-05-14T16:19:24.271400Z"
     }
    },
    "outputs": [],
@@ -21,33 +21,34 @@
    "id": "f2412e3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:12:58.274847Z",
-     "start_time": "2023-04-21T08:12:56.761830Z"
+     "end_time": "2023-10-10T07:39:40.837005Z",
+     "start_time": "2023-10-10T07:39:35.315815Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split,KFold,cross_val_score,LeaveOneOut\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split, KFold, LeaveOneOut,cross_val_score\n",
+    "from sklearn.metrics import classification_report\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "aad6b29e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T06:38:52.513514Z",
-     "start_time": "2023-04-21T06:38:52.500875Z"
+     "end_time": "2023-10-10T07:39:40.852968Z",
+     "start_time": "2023-10-10T07:39:40.839702Z"
     }
    },
    "outputs": [],
    "source": [
-    "#Read the dataset"
+    "#Read the fetal dataset"
    ]
   },
   {
@@ -56,8 +57,8 @@
    "id": "f6964202",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:13:04.952976Z",
-     "start_time": "2023-04-21T08:13:04.149879Z"
+     "end_time": "2023-10-10T07:39:41.770717Z",
+     "start_time": "2023-10-10T07:39:40.858013Z"
     }
    },
    "outputs": [
@@ -494,8 +495,8 @@
    "id": "4737313c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:13:47.392013Z",
-     "start_time": "2023-04-21T08:13:47.371522Z"
+     "end_time": "2023-10-10T07:41:15.597626Z",
+     "start_time": "2023-10-10T07:41:15.578500Z"
     }
    },
    "outputs": [],
@@ -506,28 +507,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "08c1c2a9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:16:06.759179Z",
-     "start_time": "2023-04-21T08:16:06.740808Z"
+     "end_time": "2023-10-10T07:44:31.518239Z",
+     "start_time": "2023-10-10T07:44:31.506427Z"
     }
    },
    "outputs": [],
    "source": [
-    "xtrain,xtest,ytrain,ytest = train_test_split(x,y,test_size=0.2,\n",
-    "                                            random_state=42)"
+    "xtrain,xtest,ytrain,ytest = train_test_split(x,y,test_size=0.2, random_state=45)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "e2a23251",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:16:06.992256Z",
-     "start_time": "2023-04-21T08:16:06.966996Z"
+     "end_time": "2023-10-10T07:44:31.889882Z",
+     "start_time": "2023-10-10T07:44:31.863982Z"
     }
    },
    "outputs": [],
@@ -539,27 +539,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "2e211328",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:16:07.255650Z",
-     "start_time": "2023-04-21T08:16:07.234920Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import classification_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "ad532fd4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-21T08:16:07.535857Z",
-     "start_time": "2023-04-21T08:16:07.512280Z"
+     "end_time": "2023-10-10T07:44:32.231864Z",
+     "start_time": "2023-10-10T07:44:32.206914Z"
     }
    },
    "outputs": [
@@ -569,13 +554,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.97      0.94      0.95       333\n",
-      "         2.0       0.75      0.84      0.79        64\n",
-      "         3.0       0.87      0.93      0.90        29\n",
+      "         1.0       0.94      0.96      0.95       332\n",
+      "         2.0       0.71      0.67      0.69        55\n",
+      "         3.0       0.94      0.85      0.89        39\n",
       "\n",
-      "    accuracy                           0.92       426\n",
-      "   macro avg       0.86      0.90      0.88       426\n",
-      "weighted avg       0.93      0.92      0.92       426\n",
+      "    accuracy                           0.91       426\n",
+      "   macro avg       0.86      0.83      0.84       426\n",
+      "weighted avg       0.91      0.91      0.91       426\n",
       "\n"
      ]
     }
@@ -594,72 +579,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "776876d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:18:13.821878Z",
-     "start_time": "2023-04-21T08:18:13.609532Z"
+     "end_time": "2023-10-10T07:55:01.248329Z",
+     "start_time": "2023-10-10T07:55:01.100657Z"
     }
    },
    "outputs": [],
    "source": [
-    "kf = KFold(n_splits=10)\n",
+    "kf = KFold(n_splits=5)\n",
     "\n",
-    "kf_scores = cross_val_score(DecisionTreeClassifier(),x,y,cv=kf)"
+    "scores = cross_val_score(DecisionTreeClassifier(),x,y, cv = kf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "8d7c9a4e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:18:34.039591Z",
-     "start_time": "2023-04-21T08:18:34.025701Z"
+     "end_time": "2023-10-10T07:55:01.434269Z",
+     "start_time": "2023-10-10T07:55:01.414067Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.84037559, 0.8685446 , 0.88732394, 0.87323944, 0.97183099,\n",
-       "       0.99061033, 0.8254717 , 0.87735849, 0.86792453, 0.65566038])"
+       "array([0.85680751, 0.86117647, 0.98588235, 0.84705882, 0.78823529])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kf_scores"
+    "scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "baca1013",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:19:46.311462Z",
-     "start_time": "2023-04-21T08:19:46.293341Z"
+     "end_time": "2023-10-10T07:55:01.745178Z",
+     "start_time": "2023-10-10T07:55:01.731182Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.865833997696873"
+       "0.8678320905827119"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kf_scores.mean()"
+    "scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "472c6877",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-10T07:51:16.423044Z",
+     "start_time": "2023-10-10T07:51:15.779637Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.71126761 0.75294118 0.98352941 0.88470588 0.79529412]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8255476387738193"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "kf = KFold(n_splits=5)\n",
+    "\n",
+    "scores = cross_val_score(LogisticRegression(),x,y,cv = kf)\n",
+    "\n",
+    "print(scores)\n",
+    "scores.mean()"
    ]
   },
   {
@@ -672,27 +696,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "7e621207",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:21:33.929181Z",
-     "start_time": "2023-04-21T08:21:33.459308Z"
+     "end_time": "2023-05-14T16:19:24.325954Z",
+     "start_time": "2023-05-14T16:19:24.315584Z"
     }
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('https://raw.githubusercontent.com/aishwaryamate/Datasets/main/Pima.csv', index_col=0)"
+    "#Read the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "c998dc6e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:21:35.966175Z",
-     "start_time": "2023-04-21T08:21:35.938987Z"
+     "end_time": "2023-10-10T07:56:30.790556Z",
+     "start_time": "2023-10-10T07:56:30.195054Z"
     }
    },
    "outputs": [
@@ -883,23 +907,25 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('https://raw.githubusercontent.com/aishwaryamate/Datasets/main/Pima.csv',\n",
+    "                index_col=0)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "f5c094db",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:21:58.709666Z",
-     "start_time": "2023-04-21T08:21:58.688357Z"
+     "end_time": "2023-10-10T07:57:26.500283Z",
+     "start_time": "2023-10-10T07:57:26.474228Z"
     }
    },
    "outputs": [],
@@ -910,42 +936,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "80dc6914",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:22:41.583485Z",
-     "start_time": "2023-04-21T08:22:41.563141Z"
+     "end_time": "2023-10-10T07:58:26.390003Z",
+     "start_time": "2023-10-10T07:58:19.569842Z"
     }
    },
    "outputs": [],
    "source": [
-    "lv = LeaveOneOut()"
+    "lv_cv = LeaveOneOut()\n",
+    "\n",
+    "lv_score = cross_val_score(DecisionTreeClassifier(),x,y, cv = lv_cv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "902133ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:23:12.267888Z",
-     "start_time": "2023-04-21T08:23:07.202930Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "lv_scores = cross_val_score(DecisionTreeClassifier(),x,y,cv = lv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "372eb128",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-21T08:23:22.254392Z",
-     "start_time": "2023-04-21T08:23:22.234739Z"
+     "end_time": "2023-10-10T07:58:58.593305Z",
+     "start_time": "2023-10-10T07:58:58.564014Z"
     }
    },
    "outputs": [
@@ -954,91 +967,112 @@
       "text/plain": [
        "array([1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1.,\n",
        "       1., 1., 0., 1., 1., 1., 0., 0., 1., 0., 1., 0., 1., 1., 1., 1., 1.,\n",
-       "       0., 1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 1., 0., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 0., 0., 1.,\n",
-       "       1., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       0., 1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 1., 0., 1., 0., 1., 1.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 0., 1.,\n",
+       "       1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 0., 1., 1., 1., 1., 0., 1., 1., 1., 0., 0., 1., 1., 1., 1.,\n",
+       "       1., 1., 0., 1., 1., 0., 0., 0., 1., 1., 1., 0., 0., 1., 1., 1., 1.,\n",
        "       1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 0., 0., 1., 0.,\n",
        "       0., 0., 1., 1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1., 1., 0., 1.,\n",
        "       1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 1., 0., 1., 0., 0., 1.,\n",
-       "       1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 1., 0., 1., 1., 0., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 0., 1., 1., 0., 1.,\n",
        "       1., 1., 1., 1., 0., 0., 1., 0., 0., 0., 0., 1., 0., 1., 1., 1., 0.,\n",
-       "       1., 1., 1., 0., 1., 1., 1., 0., 1., 0., 0., 1., 0., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 1., 1., 1.,\n",
        "       1., 1., 0., 1., 0., 1., 1., 1., 0., 1., 0., 1., 1., 1., 0., 0., 1.,\n",
-       "       1., 0., 0., 1., 1., 0., 0., 0., 1., 0., 1., 1., 1., 1., 1., 0., 0.,\n",
+       "       1., 1., 0., 1., 1., 1., 0., 0., 1., 0., 1., 1., 1., 1., 1., 0., 0.,\n",
        "       1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1.,\n",
        "       0., 0., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 0., 0., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 0., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 0., 0.,\n",
-       "       0., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 0.,\n",
+       "       1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 0.,\n",
+       "       0., 0., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 0., 1., 1.,\n",
+       "       0., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 0.,\n",
        "       0., 1., 1., 1., 1., 1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 1., 1.,\n",
        "       1., 1., 0., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 1., 1.,\n",
-       "       1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1.,\n",
-       "       0., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1.,\n",
+       "       1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 0., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1., 0., 1., 0., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1.,\n",
+       "       0., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1.,\n",
        "       0., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0., 0., 0., 1.,\n",
-       "       1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 0.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 0., 0., 0., 1.,\n",
+       "       1., 1., 0., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 0.,\n",
        "       1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
        "       0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
-       "       1., 0., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0.,\n",
-       "       1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 0., 0., 1., 0., 0.,\n",
+       "       1., 0., 1., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 0., 1., 0., 0.,\n",
        "       1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 1., 1.,\n",
-       "       1., 0., 1., 0., 0., 0., 0., 0., 1., 1., 0., 1., 0., 0., 1., 0., 1.,\n",
+       "       1., 0., 1., 0., 0., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1., 0., 1.,\n",
        "       1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 0., 1., 1., 0., 0.,\n",
        "       1., 1., 0., 1., 0., 0., 0., 1., 1., 1., 0., 1., 0., 1., 0., 1., 1.,\n",
        "       0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 0.,\n",
-       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
+       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0.,\n",
+       "       1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1.,\n",
        "       1., 1., 1.])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lv_scores"
+    "lv_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ef824adf",
+   "execution_count": 28,
+   "id": "c2530f76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "768"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lv_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "372eb128",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-21T08:23:44.897790Z",
-     "start_time": "2023-04-21T08:23:44.881886Z"
+     "end_time": "2023-10-10T07:59:16.533730Z",
+     "start_time": "2023-10-10T07:59:16.524104Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.70703125"
+       "0.7005208333333334"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lv_scores.mean()"
+    "lv_score.mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e9e2b89",
+   "id": "1b5d145d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1060,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
