--- a/Model Validation/Model_Validation.ipynb
+++ b/Model Validation/Model_Validation.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aad6b29e",
    "metadata": {
     "ExecuteTime": {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f6964202",
    "metadata": {
     "ExecuteTime": {
@@ -471,7 +471,7 @@
        "[2126 rows x 22 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,6 +479,30 @@
    "source": [
     "df = pd.read_csv('https://raw.githubusercontent.com/aishwaryamate/Datasets/main/fetal_health.csv')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cdea0247",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0    1655\n",
+       "2.0     295\n",
+       "3.0     176\n",
+       "Name: fetal_health, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['fetal_health'].value_counts()"
    ]
   },
   {
@@ -491,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4737313c",
    "metadata": {
     "ExecuteTime": {
@@ -517,7 +541,7 @@
    },
    "outputs": [],
    "source": [
-    "xtrain,xtest,ytrain,ytest = train_test_split(x,y,test_size=0.2, random_state=45)"
+    "xtrain,xtest,ytrain,ytest = train_test_split(x,y,test_size=0.2, random_state=0)"
    ]
   },
   {
@@ -530,11 +554,48 @@
      "start_time": "2023-10-10T07:44:31.863982Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 2., 1., 1., 1., 1., 1., 3., 1., 1., 1., 1., 1., 2.,\n",
+       "       1., 1., 2., 1., 1., 1., 3., 1., 1., 1., 2., 1., 2., 1., 1., 1., 1.,\n",
+       "       1., 1., 2., 1., 3., 1., 1., 2., 1., 1., 2., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1.,\n",
+       "       1., 1., 2., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1., 1., 1., 2., 1., 1.,\n",
+       "       1., 3., 2., 2., 1., 1., 3., 2., 1., 1., 1., 1., 1., 1., 1., 2., 1.,\n",
+       "       1., 3., 2., 1., 1., 1., 1., 1., 1., 1., 3., 1., 1., 2., 2., 3., 1.,\n",
+       "       2., 1., 1., 1., 1., 1., 1., 2., 1., 2., 3., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 2., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       3., 1., 1., 1., 1., 1., 1., 3., 1., 1., 1., 1., 1., 1., 1., 1., 3.,\n",
+       "       1., 2., 2., 1., 1., 1., 1., 1., 1., 3., 1., 1., 3., 1., 3., 3., 1.,\n",
+       "       3., 1., 1., 1., 1., 2., 1., 1., 1., 3., 1., 1., 1., 1., 2., 1., 1.,\n",
+       "       1., 3., 1., 1., 1., 1., 2., 3., 1., 1., 2., 1., 1., 1., 1., 3., 1.,\n",
+       "       1., 1., 2., 3., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       2., 3., 1., 1., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 3., 1., 3.,\n",
+       "       1., 3., 1., 1., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 2., 3., 1.,\n",
+       "       2., 1., 2., 2., 3., 1., 1., 3., 1., 3., 3., 1., 1., 1., 3., 1., 3.,\n",
+       "       1., 2., 1., 3., 1., 1., 1., 1., 2., 1., 1., 1., 1., 3., 1., 1., 1.,\n",
+       "       1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 3., 3., 1., 3., 2.,\n",
+       "       1., 2., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 2., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 3., 1., 1., 1., 1., 1., 1., 1., 2., 3.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 3., 1., 2.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 1., 1., 1.,\n",
+       "       1.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dt = DecisionTreeClassifier()\n",
     "dt.fit(xtrain,ytrain)\n",
-    "ypred = dt.predict(xtest)"
+    "ypred = dt.predict(xtest)\n",
+    "ypred"
    ]
   },
   {
@@ -554,13 +615,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         1.0       0.94      0.96      0.95       332\n",
-      "         2.0       0.71      0.67      0.69        55\n",
-      "         3.0       0.94      0.85      0.89        39\n",
+      "         1.0       0.95      0.97      0.96       326\n",
+      "         2.0       0.79      0.71      0.75        58\n",
+      "         3.0       0.93      0.90      0.92        42\n",
       "\n",
-      "    accuracy                           0.91       426\n",
-      "   macro avg       0.86      0.83      0.84       426\n",
-      "weighted avg       0.91      0.91      0.91       426\n",
+      "    accuracy                           0.93       426\n",
+      "   macro avg       0.89      0.86      0.87       426\n",
+      "weighted avg       0.92      0.93      0.93       426\n",
       "\n"
      ]
     }
@@ -589,7 +650,7 @@
    },
    "outputs": [],
    "source": [
-    "kf = KFold(n_splits=5)\n",
+    "kf = KFold\n",
     "\n",
     "scores = cross_val_score(DecisionTreeClassifier(),x,y, cv = kf)"
    ]
@@ -608,7 +669,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.85680751, 0.86117647, 0.98588235, 0.84705882, 0.78823529])"
+       "array([0.8685446 , 0.85176471, 0.98588235, 0.82823529, 0.76705882])"
       ]
      },
      "execution_count": 20,
@@ -634,7 +695,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8678320905827119"
+       "0.860297155481911"
       ]
      },
      "execution_count": 21,
@@ -678,12 +739,35 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "kf = KFold(n_splits=5)\n",
+    "lg_scores = cross_val_score(LogisticRegression(),x,y,cv = kf)\n",
     "\n",
-    "scores = cross_val_score(LogisticRegression(),x,y,cv = kf)\n",
+    "print(lg_scores)\n",
+    "lg_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "890e5943",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8908317831517406"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier \n",
     "\n",
-    "print(scores)\n",
-    "scores.mean()"
+    "kf = KFold(n_splits=10)\n",
+    "rf_scores = cross_val_score(RandomForestClassifier(),x,y,cv = kf)\n",
+    "rf_scores.mean()"
    ]
   },
   {
@@ -711,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "c998dc6e",
    "metadata": {
     "ExecuteTime": {
@@ -907,7 +991,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "f5c094db",
    "metadata": {
     "ExecuteTime": {
@@ -936,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "80dc6914",
    "metadata": {
     "ExecuteTime": {
@@ -953,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "902133ee",
    "metadata": {
     "ExecuteTime": {
@@ -966,54 +1050,54 @@
      "data": {
       "text/plain": [
        "array([1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1.,\n",
-       "       1., 1., 0., 1., 1., 1., 0., 0., 1., 0., 1., 0., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 0., 1., 0., 1., 0., 0., 1., 0., 1., 0., 1., 1., 1., 1., 1.,\n",
        "       0., 1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 1., 0., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 0., 1.,\n",
-       "       1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 0., 0., 0.,\n",
+       "       1., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 0., 1., 1.,\n",
        "       1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 0., 1., 1., 0., 0., 0., 1., 1., 1., 0., 0., 1., 1., 1., 1.,\n",
-       "       1., 0., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 0., 0., 1., 0.,\n",
+       "       1., 1., 0., 1., 1., 1., 1., 0., 1., 1., 1., 0., 0., 1., 1., 1., 1.,\n",
+       "       1., 0., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
        "       0., 0., 1., 1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1., 1., 0., 1.,\n",
        "       1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 1., 0., 1., 0., 0., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 0., 1., 1., 0., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1.,\n",
        "       1., 1., 1., 1., 0., 0., 1., 0., 0., 0., 0., 1., 0., 1., 1., 1., 0.,\n",
-       "       1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 1., 1., 1.,\n",
-       "       1., 1., 0., 1., 0., 1., 1., 1., 0., 1., 0., 1., 1., 1., 0., 0., 1.,\n",
-       "       1., 1., 0., 1., 1., 1., 0., 0., 1., 0., 1., 1., 1., 1., 1., 0., 0.,\n",
+       "       1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 0., 1., 1.,\n",
+       "       1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 0., 1., 1., 1., 0., 0., 1.,\n",
+       "       1., 0., 0., 1., 1., 0., 0., 0., 1., 0., 1., 1., 1., 1., 1., 0., 0.,\n",
        "       1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1.,\n",
        "       0., 0., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 0., 0., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 0.,\n",
-       "       0., 0., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 0., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 0., 0.,\n",
+       "       0., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1.,\n",
        "       0., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 0.,\n",
        "       0., 1., 1., 1., 1., 1., 0., 1., 0., 0., 0., 0., 1., 1., 0., 1., 1.,\n",
        "       1., 1., 0., 0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
-       "       1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 1., 1.,\n",
+       "       1., 1., 0., 0., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 1., 1.,\n",
        "       1., 1., 0., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 0., 1., 1.,\n",
        "       1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1., 0., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1.,\n",
-       "       0., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1.,\n",
+       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 0., 1., 1., 1., 1., 1., 1., 0., 0., 1., 1.,\n",
        "       0., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 0., 1., 1.,\n",
-       "       1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 0., 0., 0., 1.,\n",
-       "       1., 1., 0., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 0.,\n",
+       "       1., 1., 1., 1., 1., 0., 1., 0., 1., 0., 1., 1., 1., 0., 0., 0., 1.,\n",
+       "       1., 1., 1., 0., 0., 0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0.,\n",
        "       1., 1., 1., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
-       "       0., 1., 1., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
-       "       1., 0., 1., 1., 1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 1.,\n",
+       "       0., 1., 0., 1., 0., 1., 1., 1., 0., 1., 1., 1., 1., 1., 0., 1., 0.,\n",
+       "       1., 0., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 1., 1., 0., 1., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 0.,\n",
        "       1., 1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 0., 1., 0., 0.,\n",
-       "       1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 1., 1.,\n",
-       "       1., 0., 1., 0., 0., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1., 0., 1.,\n",
+       "       1., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0., 1., 1., 1.,\n",
+       "       1., 0., 1., 0., 0., 0., 0., 0., 1., 1., 0., 1., 0., 1., 1., 0., 1.,\n",
        "       1., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 1., 0., 1., 1., 0., 0.,\n",
-       "       1., 1., 0., 1., 0., 0., 0., 1., 1., 1., 0., 1., 0., 1., 0., 1., 1.,\n",
-       "       0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 0., 1., 1., 1., 1., 0.,\n",
-       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 0.,\n",
-       "       1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 1., 0., 1.,\n",
+       "       1., 1., 0., 1., 0., 0., 0., 1., 1., 1., 0., 1., 0., 1., 0., 1., 0.,\n",
+       "       0., 1., 1., 1., 1., 0., 1., 1., 0., 1., 0., 1., 1., 1., 1., 1., 0.,\n",
+       "       0., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1.,\n",
+       "       1., 1., 1., 1., 1., 0., 1., 1., 0., 1., 1., 0., 1., 1., 1., 1., 1.,\n",
        "       1., 1., 1.])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,8 +1108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c2530f76",
+   "execution_count": 36,
+   "id": "cb4725cd",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1118,7 @@
        "768"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "372eb128",
    "metadata": {
     "ExecuteTime": {
@@ -1057,10 +1141,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7005208333333334"
+       "0.703125"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
