--- a/Model Validation/Model_Validation.ipynb
+++ b/Model Validation/Model_Validation.ipynb
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cdea0247",
+   "id": "d3d94d46",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
    },
    "outputs": [],
    "source": [
-    "kf = KFold\n",
+    "kf = KFold(n_splits=5)\n",
     "\n",
     "scores = cross_val_score(DecisionTreeClassifier(),x,y, cv = kf)"
    ]
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "890e5943",
+   "id": "2ae04344",
    "metadata": {},
    "outputs": [
     {
